--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,93 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "e4d21779",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/lv_local/home/omer.y/.local/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch_geometric\n",
-    "from ogb.nodeproppred import PygNodePropPredDataset\n",
     "from torch_geometric.data import HeteroData\n",
-    "from torch_geometric.transforms import ToUndirected"
+    "from torch_geometric.datasets import HGBDataset\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4f7b8510",
+   "execution_count": null,
+   "id": "cde6715f",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/lv_local/home/omer.y/PROGS/miniconda3/envs/pyg_env/lib/python3.9/site-packages/ogb/nodeproppred/dataset_pyg.py:69: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  self.data, self.slices = torch.load(self.processed_paths[0])\n"
+      "Downloading https://drive.usercontent.google.com/download?id=1xbJ4QE9pcDJOcALv7dYhHDCPITX2Iddz&confirm=t\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting data/acm/raw/data.zip\n",
+      "Processing...\n",
+      "Done!\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "dataset = PygNodePropPredDataset(name='ogbn-mag')\n",
-    "\n",
-    "split_idx = dataset.get_idx_split()\n",
-    "train_idx, valid_idx, test_idx = split_idx[\"train\"], split_idx[\"valid\"], split_idx[\"test\"]\n",
-    "graph = dataset[0] # pyg graph object"
+    "dataset = HGBDataset(root='data/', name='acm')\n",
+    "data = dataset[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ce93f8cd",
+   "execution_count": 22,
+   "id": "8fe7f18b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Data(\n",
-       "  num_nodes_dict={\n",
-       "    author=1134649,\n",
-       "    field_of_study=59965,\n",
-       "    institution=8740,\n",
-       "    paper=736389,\n",
+       "HeteroData(\n",
+       "  paper={\n",
+       "    x=[3025, 1902],\n",
+       "    y=[3025],\n",
+       "    train_mask=[3025],\n",
+       "    test_mask=[3025],\n",
        "  },\n",
-       "  edge_index_dict={\n",
-       "    (author, affiliated_with, institution)=[2, 1043998],\n",
-       "    (author, writes, paper)=[2, 7145660],\n",
-       "    (paper, cites, paper)=[2, 5416271],\n",
-       "    (paper, has_topic, field_of_study)=[2, 7505078],\n",
-       "  },\n",
-       "  x_dict={ paper=[736389, 128] },\n",
-       "  node_year={ paper=[736389, 1] },\n",
-       "  edge_reltype={\n",
-       "    (author, affiliated_with, institution)=[1043998, 1],\n",
-       "    (author, writes, paper)=[7145660, 1],\n",
-       "    (paper, cites, paper)=[5416271, 1],\n",
-       "    (paper, has_topic, field_of_study)=[7505078, 1],\n",
-       "  },\n",
-       "  y_dict={ paper=[736389, 1] }\n",
+       "  author={ x=[5959, 1902] },\n",
+       "  subject={ x=[56, 1902] },\n",
+       "  term={ num_nodes=1902 },\n",
+       "  (paper, cite, paper)={ edge_index=[2, 5343] },\n",
+       "  (paper, ref, paper)={ edge_index=[2, 5343] },\n",
+       "  (paper, to, author)={ edge_index=[2, 9949] },\n",
+       "  (author, to, paper)={ edge_index=[2, 9949] },\n",
+       "  (paper, to, subject)={ edge_index=[2, 3025] },\n",
+       "  (subject, to, paper)={ edge_index=[2, 3025] },\n",
+       "  (paper, to, term)={ edge_index=[2, 255619] },\n",
+       "  (term, to, paper)={ edge_index=[2, 255619] }\n",
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "graph\n",
-    "\n"
+    "data"
    ]
   },
   {
@@ -98,10 +88,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_multiplex_node_set():\n",
+    "def create_multiplex_node_set(num_node_dict, node_types, edge_types):\n",
+    "    \"\"\"\n",
+    "    Create a multiplex node set from the given node type counts.\n",
+    "    \n",
+    "    Args:\n",
+    "        num_node_dict (dict): A dictionary mapping node types to their counts.\n",
+    "        node_types (list): A list of node types.\n",
+    "        edge_types (list): A list of edge types.\n",
+    "    \n",
+    "    Returns:\n",
+    "        A set of nodes for multiplex graph representation - each node splits into k nodes (where k is the number of edge types).\n",
+    "    \"\"\"\n",
     "    pass\n",
+    "        \n",
     "\n",
-    "def create_multiplex_edge_layer():\n",
+    "def create_multiplex_edge_layer(node_set, edge_type, edge_index):\n",
     "    pass\n",
     "\n",
     "def hetero_to_multiplex(hetero_data: HeteroData):\n",
